# test-allure-server

./: .build-pod.yaml  .drone.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  pyproject.toml  setup.cfg  tasks.py
allure-results/: 004f8477-f8e7-4078-a0ec-b47746bdc292-container.json  0074ca43-8ade-45b2-9b07-4101b13c2e0b-container.json  00b244ae-c1d4-49f6-898b-7907726e6414-container.json  00fe7430-eef8-4b56-928d-65d5dbc48fdf-container.json  011c9adb-36c1-4678-8991-aad02bfcdfea-container.json  0157e39d-3dff-434e-b030-c39b70f5b4df-result.json  01753bf9-1b0f-4aa7-aa40-fe57c0a8831a-container.json  019f0089-e3a1-4458-aae0-4284b3093e86-container.json  01b580cd-35ce-43cc-a53c-69d3cad01e9d-container.json  02173914-78a2-41bd-b6e4-444691a57967-container.json  02802845-80cb-47f1-b2f8-7c0e4e328805-container.json  0295274f-a558-4ae0-8804-9280922711d2-container.json  02ab931f-6c13-4729-8ce9-1376d3a81f10-container.json  032b9fe6-3968-4d19-83b7-de361c5bd2bf-container.json  03571fe4-30c1-4535-ab4a-56011194e8c5-container.json  037024c6-3ef4-4921-875e-32208ad85da8-container.json  03f83e20-87ed-455b-b070-b4a1e66a48fb-container.json  04ac8840-0939-4d25-85a8-361146ac2e50-container.json  057893e8-a040-4487-8a51-6f14e3fe3637-container.json  05a0a8ba-1cff-4398-b63b-9b915d5eb0c8-container.json  067fbdbb-0282-4258-826e-b1f379c34d1f-container.json  06c760cc-3c14-4ef6-b978-4120141f4ce8-container.json  0723aebe-e8b0-4541-9bc1-1c9db9fd192e-container.json  0738f866-1c67-4db4-a5c8-3ff8e6a83f48-container.json  073dd911-d3f3-4f21-99dc-111cb1569cb0-container.json  07531fb0-54f2-4460-bcd9-f6edc8ebfaf9-container.json  07a8dbcc-445e-4602-985e-8fba22380382-attachment.txt  07aab7ba-ebb4-4038-bab7-e862d2db39d5-container.json  08c7d5ca-9516-4df1-a5b1-155fb472c09c-container.json  08deb8ea-5ba1-4a68-a049-50a8acb9d909-container.json  092943b1-673d-4bef-bc6e-c980f87040c8-result.json  09e162f4-a445-4fbd-b76b-34f46fcc37ce-container.json  09ec7ae3-d30c-4da2-8809-98da85af9e89-container.json  0a361528-3e03-46d6-9db5-3012f269ea14-container.json  0a5b2c3a-6894-45d7-a5df-f0c9d9197ad4-container.json  0a66d9bc-d84b-4405-9378-22f3dcdd8434-container.json  0ae3b60b-600b-4768-88a1-e1c0082367fa-container.json  0bceba1b-0bb4-48c9-8ca7-998e5cd4d213-result.json  0c172dcc-d9a9-4976-9fcf-109bd1a517fe-container.json  0c2e736a-333d-4066-8ef5-1ed247df0e8a-container.json  (+739 more)
chart/: Chart.yml
harness/api/base/: base_requests.py  request_sender.py
harness/config/: configuration.py  logger.py  logging.json
harness/enums/: environment.py  extended_enum.py  http_method.py
harness/helpers/: parametrize.py  retry.py
harness/helpers/utils/: assert_utils.py  attribute_mixin.py  ignore_nulls_dict_mixin.py  string_utils.py
tests/: conftest.py  write_append_parquet.py
tests/unit/api/base/: test_base_requests.py  test_e2e.py
